Refactor index.html for improved layout and content
Updated the structure and content of the homepage to enhance clarity and engagement.

--- a/index.html
+++ b/index.html
@@ -9,53 +9,55 @@
 </head>
 <body>
   <header>
-    <img src="Lithako-logo.png" alt="Lithako Edu & Sports Logo" class="logo" />
+    <div class="logo-container">
+      <img src="Lithako-logo.png" alt="Lithako Edu & Sports Logo" class="logo" />
+    </div>
     <nav class="navbar">
       <ul>
         <li><a href="index.html" class="active">Home</a></li>
         <li><a href="books.html">Books</a></li>
         <li><a href="tutoring.html">Tutoring</a></li>
+        <li><a href="#about">About</a></li>
+        <li><a href="#contact">Contact</a></li>
       </ul>
     </nav>
   </header>
 
   <section class="intro">
-    <h1>Welcome to: <strong>Lithako Edu & Sports</strong></h1>
+    <h1>Welcome to: Lithako Edu & Sports</h1>
     <p class="tagline">Empowering our young minds through education & sports.</p>
   </section>
 
-  <section class="content-box">
+  <section class="info-box">
     <p>
-      Our structured training programs are tailored for learners aged 5 to 15,
-      combining physical fitness, teamwork, and academic excellence.
+      Our structured training programs are tailored for learners aged 5 to 15, combining academic support with high-performance sports development across Football, Basketball, Netball, Athletics, and more.  
+      With qualified coaches, safe facilities, and results-driven programs, we empower every child to reach their full potential — academically, physically, and mentally.
+    </p>
+    <p>
+      We’re here to nurture their confidence, teach teamwork, and show them that dedication pays off both in the classroom and on the field.  
+      Through our balanced approach to education and sport, children learn discipline, respect, and resilience — values that carry them far beyond the now.  
+      <strong>Developing Complete Athletes, because every child deserves a chance.</strong>
     </p>
   </section>
 
-  <section class="content-box">
-    <h2>Explore Our Books</h2>
-    <p>Dive into exciting and educational books that inspire growth and creativity in young readers.</p>
-    <button onclick="window.location.href='books.html'" class="cta-button">Explore Our Books</button>
-  </section>
+  <div class="button-group">
+    <button onclick="window.location.href='books.html'" class="cta-button">📘 Explore Our Books</button>
+    <button onclick="window.location.href='tutoring.html'" class="cta-button">🎓 Join Our Tutoring</button>
+  </div>
 
-  <section class="content-box">
-    <h2>Join Our Tutoring Program</h2>
-    <p>Our tutoring sessions are designed to strengthen learning foundations and build confidence.</p>
-    <button onclick="window.location.href='tutoring.html'" class="cta-button">Join Our Tutoring</button>
-  </section>
-
-  <section class="content-box">
+  <section id="about" class="info-box">
     <h2>About Ranneile Lesupi</h2>
     <p>
-      Ranneile Lesupi is a visionary founder, coach, and creative who blends education, sports,
-      and storytelling to empower the youth through Lithako Edu & Sports.
+      <strong>Ranneile Lesupi – Sports Coach & Business Visionary.</strong> A storyteller at heart.  
+      Through Lithako Edu & Sports, he mentors and develops young learners and athletes aged 5–15, guiding them to become confident scholars and disciplined champions.
     </p>
   </section>
 
-  <section class="content-box contact">
+  <section id="contact" class="info-box">
     <h2>Contact Us</h2>
-    <p><strong>Email:</strong> lithakoedu@gmail.com</p>
-    <p><strong>Phone:</strong> +27 67 265 6319</p>
-    <p><strong>Location:</strong> City of Matlosana</p>
+    <p>📧 <strong>Email:</strong> lithakoedu@gmail.com</p>
+    <p>📞 <strong>Phone:</strong> +27 67 265 6319</p>
+    <p>📍 <strong>Location:</strong> City of Matlosana</p>
   </section>
 
   <footer>
