--- a/index.html
+++ b/index.html
@@ -5,16 +5,118 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Lithako Edu & Sports</title>
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@600;700&display=swap" rel="stylesheet">
-  <link rel="stylesheet" href="styles.css">
+  
+  <style>
+    /* General Styles */
+    body {
+      margin: 0;
+      font-family: 'Poppins', sans-serif;
+      background-color: #f1f8ff;
+      color: #002b5b;
+      line-height: 1.6;
+    }
+
+    /* Header */
+    header {
+      text-align: center;
+      background-color: #b3dcff; /* soft blue background like your sample */
+      padding: 1.5rem 0;
+      border-bottom: 4px solid #aee0ff;
+    }
+
+    header img {
+      width: 100%;
+      max-width: 650px;
+      border: 8px solid #aee0ff; /* light blue outline */
+      border-radius: 12px;
+      background-color: white;
+    }
+
+    /* Navbar */
+    nav {
+      display: flex;
+      justify-content: center;
+      background: #0077cc;
+      padding: 0.8rem 0;
+      flex-wrap: wrap;
+    }
+
+    nav a {
+      color: white;
+      text-decoration: none;
+      margin: 0 1.2rem;
+      font-weight: 600;
+      font-size: 1.05rem;
+      transition: color 0.3s ease;
+    }
+
+    nav a:hover {
+      color: #aee0ff;
+    }
+
+    /* Section Styles */
+    .section {
+      max-width: 900px;
+      margin: 2rem auto;
+      padding: 1.5rem;
+    }
+
+    .box,
+    .bio-box,
+    .contact-box {
+      background: #ffffff;
+      border-left: 5px solid #2a628f;
+      padding: 1.5rem;
+      border-radius: 12px;
+      margin-bottom: 1.5rem;
+      box-shadow: 0 4px 10px rgba(0, 0, 0, 0.08);
+    }
+
+    /* Buttons */
+    .cta-button {
+      background: #004c99;
+      color: white;
+      padding: 0.8rem 1.8rem;
+      border: none;
+      border-radius: 8px;
+      font-weight: bold;
+      cursor: pointer;
+      margin-top: 1rem;
+      margin-right: 1rem;
+      transition: background 0.3s ease;
+    }
+
+    .cta-button:hover {
+      background: #003366;
+    }
+
+    /* Footer */
+    footer {
+      background: #002b5b;
+      color: white;
+      text-align: center;
+      padding: 1rem;
+      font-size: 0.9rem;
+    }
+
+    /* Responsive */
+    @media (max-width: 700px) {
+      nav a {
+        margin: 0.5rem;
+        font-size: 0.95rem;
+      }
+
+      header img {
+        max-width: 90%;
+      }
+    }
+  </style>
 </head>
 <body>
 
   <!-- LOGO -->
-  <header style="background-color: #002b5b; text-align: center; padding: 0; margin: 0;">
-    <div style="background-color: #aee0ff; padding: 10px 0;">
-      <img src="Lithako-logo.png" alt="Lithako Edu & Sports Logo"
-           style="width: 100%; max-width: none; border: 8px solid #aee0ff; border-radius: 0; display: block; margin: 0 auto;">
-    </div>
+  <header>
+    <img src="Lithako-logo.png" alt="Lithako Edu & Sports Logo">
   </header>
 
   <!-- NAVIGATION -->
