Revise index.html for branding and layout updates
Updated title and styles for improved aesthetics. Enhanced layout and added new sections for better content presentation.

--- a/index.html
+++ b/index.html
@@ -3,110 +3,129 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Lithako Edu & Sports</title>
+  <title>Lithako Edu – The Loony Hypochondriacs</title>
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@600;700&display=swap" rel="stylesheet">
-  
   <style>
-    /* General Styles */
     body {
+      font-family: Arial, sans-serif;
       margin: 0;
-      font-family: 'Poppins', sans-serif;
-      background-color: #f1f8ff;
-      color: #002b5b;
+      background: #f1f8ff;
+      color: #003366;
       line-height: 1.6;
     }
-
-    /* Header */
     header {
+      background: #000000;
+      color: white;
       text-align: center;
-      background-color: #b3dcff; /* soft blue background like your sample */
-      padding: 1.5rem 0;
-      border-bottom: 4px solid #aee0ff;
+      padding: 2rem 1rem;
+      font-family: 'Poppins', sans-serif;
     }
-
-    header img {
-      width: 100%;
-      max-width: 650px;
-      border: 8px solid #aee0ff; /* light blue outline */
-      border-radius: 12px;
-      background-color: white;
+    header h1 {
+      margin: 0;
+      font-size: 2.2rem;
     }
-
-    /* Navbar */
     nav {
+      background: #005fa3;
       display: flex;
       justify-content: center;
-      background: #0077cc;
-      padding: 0.8rem 0;
-      flex-wrap: wrap;
+      gap: 2rem;
+      padding: 1rem 0;
     }
-
     nav a {
       color: white;
       text-decoration: none;
-      margin: 0 1.2rem;
-      font-weight: 600;
-      font-size: 1.05rem;
-      transition: color 0.3s ease;
-    }
-
-    nav a:hover {
-      color: #aee0ff;
-    }
-
-    /* Section Styles */
-    .section {
-      max-width: 900px;
-      margin: 2rem auto;
-      padding: 1.5rem;
-    }
-
-    .box,
-    .bio-box,
-    .contact-box {
-      background: #ffffff;
-      border-left: 5px solid #2a628f;
-      padding: 1.5rem;
-      border-radius: 12px;
-      margin-bottom: 1.5rem;
-      box-shadow: 0 4px 10px rgba(0, 0, 0, 0.08);
-    }
-
-    /* Buttons */
-    .cta-button {
-      background: #004c99;
-      color: white;
-      padding: 0.8rem 1.8rem;
-      border: none;
-      border-radius: 8px;
       font-weight: bold;
+      font-size: 1.1rem;
+    }
+    nav a:hover {
+      text-decoration: underline;
+    }
+    .hero {
+      padding: 2rem 1rem;
+      text-align: center;
+    }
+    .hero img {
+      max-width: 300px;
+      width: 80%;
+      height: auto;
+      border-radius: 12px;
+      box-shadow: 0 4px 12px rgba(0,0,0,0.1);
+    }
+    .hero button, .cta-button {
+      background: #005fa3;
+      color: white;
+      border: none;
+      padding: 0.75rem 1.5rem;
+      font-size: 1rem;
+      border-radius: 6px;
       cursor: pointer;
       margin-top: 1rem;
-      margin-right: 1rem;
-      transition: background 0.3s ease;
     }
-
-    .cta-button:hover {
-      background: #003366;
+    .section {
+      max-width: 800px;
+      margin: auto;
+      padding: 2rem 1rem;
     }
-
-    /* Footer */
+    .testimonial, .order-box, .thank-you {
+      background: #e0f0ff;
+      border-left: 4px solid #0077cc;
+      padding: 1rem;
+      margin-bottom: 1.5rem;
+      border-radius: 6px;
+    }
+    .bio-box {
+      background: #ffffff;
+      color: #000000;
+      border-left: 4px solid #000000;
+      padding: 1rem;
+      margin-bottom: 1.5rem;
+      border-radius: 6px;
+    }
+    .faq {
+      background: #ffffff;
+      color: #000000;
+      border-left: 4px solid #0077cc;
+      padding: 1rem;
+      margin-bottom: 1.5rem;
+      border-radius: 6px;
+    }
+    .contact-box {
+      color: #000000;
+    }
     footer {
-      background: #002b5b;
+      background: #000000;
       color: white;
       text-align: center;
       padding: 1rem;
       font-size: 0.9rem;
     }
-
-    /* Responsive */
-    @media (max-width: 700px) {
-      nav a {
-        margin: 0.5rem;
-        font-size: 0.95rem;
-      }
-
-      header img {
+    summary {
+      font-weight: bold;
+      font-size: 1.1rem;
+      cursor: pointer;
+      display: flex;
+      align-items: center;
+    }
+    summary::marker {
+      content: "\25BC ";
+      font-size: 1rem;
+      color: #005fa3;
+    }
+    .back-home {
+      text-align: center;
+      margin: 2rem 0;
+    }
+    .back-home button {
+      background: #005fa3;
+      color: white;
+      border: none;
+      padding: 0.75rem 1.5rem;
+      font-size: 1rem;
+      border-radius: 6px;
+      cursor: pointer;
+    }
+    @media (max-width: 600px) {
+      .hero img {
         max-width: 90%;
       }
     }
@@ -114,59 +133,97 @@
 </head>
 <body>
 
-  <!-- LOGO -->
-  <header>
-    <img src="Lithako-logo.png" alt="Lithako Edu & Sports Logo">
-  </header>
+<header>
+  <h1>Lithako Edu</h1>
+  <p>Order <em>The Loony Hypochondriacs</em> Today</p>
+</header>
 
-  <!-- NAVIGATION -->
-  <nav>
-    <a href="index.html">Home</a>
-    <a href="books.html">Books</a>
-    <a href="tutoring.html">Tutoring</a>
-  </nav>
+<nav>
+  <a href="index.html">Home</a>
+  <a href="tutoring.html">Tutoring</a>
+</nav>
 
-  <!-- MAIN INTRO -->
-  <section class="section" style="text-align:center;">
-    <h2>Welcome to: <strong>Lithako Edu & Sports</strong></h2>
-    <p><em>Empowering our young minds through education & sports.</em></p>
-  </section>
+<section class="hero">
+  <img src="tlh-cover.jpg" alt="The Loony Hypochondriacs Book Cover">
+  <br>
+  <button onclick="document.getElementById('order').scrollIntoView({ behavior: 'smooth' });">Order Now</button>
+</section>
 
-  <section class="section">
-    <div class="box">
-      <p>Our structured training programs are tailored for learners aged 5 to 15, combining academic support with high-performance sports development across Football, Basketball, Netball, Athletics, and more.</p>
-      <p>With qualified coaches, safe facilities, and results-driven programs, we empower every child to reach their full potential — academically, physically, and mentally.</p>
-      <p>We’re here to nurture their confidence, teach teamwork, and show them that dedication pays off both in the classroom and on the field.</p>
-      <p>Through our balanced approach to education and sport, children learn discipline, respect, and resilience — values that will carry them far beyond the now.</p>
-      <p><strong>Developing Complete Athletes, because every child deserves a chance.</strong></p>
-    </div>
-  </section>
+<section class="section">
+  <h2>About the Book</h2>
+  <p>Welcome to <strong>Hypercondria™</strong> — a flawless, medically optimized town where not having a disorder is the ultimate red flag.</p>
+  <p>Here, wellness is currency, therapy is mandatory, and your daily dose of medication isn't just encouraged — it's celebrated. From Diagnosipops™ to Sadness Management Seminars, everyone's a proud patient. Feeling fine? You're clearly in denial.</p>
+  <p>Enter Hloux, a quiet skeptic with a suspiciously clean medical record. When a chance encounter with a rebellious soul named Noni exposes him to the glitch beneath the system's polished smile, Hloux begins to see the truth: They don't need to drug you — just convince you to medicate yourself.</p>
+  <p>Together they descend into the pharmaceutical funhouse, dodging Side-Effect Evangelists, Dopamine Influencers, and pill-pushing prophets. Beneath the synthetic joy and curated neuroses, something unmedicated is waking up... and it's not approved by the Council of Diagnostics™.</p>
+  <button class="cta-button" onclick="document.getElementById('order').scrollIntoView({ behavior: 'smooth' });">Order Now</button>
+</section>
 
-  <div style="text-align:center;">
-    <button class="cta-button" onclick="window.location.href='books.html'">📚 Explore Our Books</button>
-    <button class="cta-button" onclick="window.location.href='tutoring.html'">🎓 Join Our Tutoring</button>
+<section class="section" id="order">
+  <h2>How to Order</h2>
+  <div class="order-box">
+    <p><strong>Price:</strong> R369 (excluding delivery)</p>
+    <p><strong>Payment Method:</strong> EFT Only</p>
+    <p><strong>Bank:</strong> Capitec Business<br>
+       <strong>Account Name:</strong> Lithako Edu and Sports<br>
+       <strong>Account Number:</strong> 1051 3359 06</p>
+    <p><strong>Reference:</strong> Your Full Name + <code>#TLH</code></p>
+    <p>Send proof of payment to: <a href="mailto:lithakoedu@gmail.com">lithakoedu@gmail.com</a></p>
   </div>
+</section>
 
-  <!-- ABOUT -->
-  <section class="section">
-    <div class="bio-box">
-      <h2>About Ranneile Lesupi</h2>
-      <p><strong>Ranneile Lesupi</strong> – Sports Coach & Business Visionary. A storyteller at heart.</p>
-      <p>Through <strong>Lithako Edu & Sports</strong>, he mentors and develops young learners and athletes aged 5–15, guiding them to become confident scholars and disciplined champions.</p>
-    </div>
-  </section>
+<section class="section">
+  <h2>What Readers Are Saying</h2>
+  <div class="testimonial">
+    <p><em>"I loved it, as it was very quirky, funny and thought-provoking."</em></p>
+  </div>
+  <div class="testimonial">
+    <p><em>"A brilliantly satirical romp through the neuroses of a truly unforgettable character. Each page had me laughing out loud, sometimes in disbelief, often in recognition. If you enjoy satire with a touch of madness, this is the perfect read."</em></p>
+  </div>
+</section>
 
-  <!-- CONTACT -->
-  <section class="section contact-box">
-    <h2>Contact Us</h2>
-    <p>📧 <strong>Email:</strong> <a href="mailto:lithakoedu@gmail.com">lithakoedu@gmail.com</a><br>
-       📞 <strong>Phone:</strong> +27 67 265 6319<br>
-       📍 <strong>Location:</strong> City of Matlosana</p>
-  </section>
+<section class="section">
+  <h2 style="color: black;">About the Author</h2>
+  <div class="bio-box">
+    <p><strong>Ranneile Lesupi</strong>, Sports Coach & Business Visionary. A Storyteller at heart.</p>
+    <p>Ranneile Lesupi is a dynamic entrepreneur, creative force, and author whose ventures span across industry and imagination. As the creative lifeblood behind Ranneile Projects, he leads innovative initiatives that defy conventional categories.</p>
+    <p>Through Lithako Edu & Sports, he also physically coaches and mentors children aged 5–15, nurturing tomorrow’s champions both on the field and in their lives. In hospitality, his company Maqhubu Hospitality brings authentic warmth and elegance to every guest experience. He’s also the tech-savvy founder of Lelomotech, providing seamless Solar installations, proprietary Wi-Fi line and router connectivity. His fashion label, RuntaFit Apparel, blends style with purpose; all of this operates under the strategic guidance of his powerhouse holdings firm, House Of Nneile, where he excels as COO.</p>
+    <p>On the page and screen, Ranneile channels his storytelling gift of writing books, music, series, and screenplay that speak loudly to his community and beyond. His work is bold, real, lyrical and unapologetic. Every venture he leads is more than a project—it’s a statement.</p>
+  </div>
+</section>
 
-  <footer>
-    &copy; 2025 Lithako Edu & Sports. All rights reserved.
-  </footer>
+<section class="section">
+  <details class="faq" open>
+    <summary style="color: black;">⬇️ Shipping FAQs</summary>
+    <p><strong>Is delivery included in the price?</strong><br>
+    No, delivery is charged separately. You can choose between Pep Paxi, Pudo, or PostNet.</p>
+
+    <p><strong>Do you ship outside South Africa?</strong><br>
+    Yes, we offer worldwide shipping.</p>
+
+    <p><strong>When will I receive my book?</strong><br>
+    Orders will ship at the end of September 2025 once orders close and hard copies are printed.</p>
+  </details>
+</section>
+
+<section class="section thank-you">
+  <h2>Thank You!</h2>
+  <p>Thank you for your interest in <em>The Loony Hypochondriacs</em>. Your support helps bring bold, fresh stories to life. We can't wait to deliver your copy soon!</p>
+</section>
+
+<section class="section contact-box">
+  <h2>Contact Us</h2>
+  <p><strong>Email:</strong> <a href="mailto:lithakoedu@gmail.com">lithakoedu@gmail.com</a><br>
+     <strong>Phone:</strong> +27 67 265 6319<br>
+     <strong>Location:</strong> City of Matlosana</p>
+</section>
+
+<div class="back-home">
+  <button onclick="window.location.href='index.html'">Back to Home</button>
+</div>
+
+<footer>
+  &copy; 2025 Lithako Edu. All rights reserved.
+</footer>
 
 </body>
 </html>
