--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
       font-family: Arial, sans-serif;
       margin: 0;
       background: #f1f8ff;
-      color: #003366;
+      color: #000000;
       line-height: 1.6;
     }
     header {
@@ -48,16 +48,16 @@
     .welcome-section {
       text-align: center;
       padding: 2rem 1rem;
+      color: #000000; /* Make all text black */
     }
-    .welcome-section h1 {
+    .welcome-section h1,
+    .welcome-section h2 {
       font-size: 2.5rem;
       margin: 0.5rem 0;
       font-weight: bold;
     }
     .welcome-section h2 {
-      font-size: 1.5rem;
-      font-weight: bold;
-      margin: 0.5rem 0 1rem 0;
+      /* Keep both "Welcome to:" and "Empowering..." same size as h1? */
     }
     .welcome-section p {
       max-width: 800px;
@@ -87,9 +87,13 @@
       display: flex;
       align-items: center;
       gap: 0.5rem;
+      transition: transform 0.2s;
     }
     .buttons-section button i {
       font-size: 1.2rem;
+    }
+    .buttons-section button:hover {
+      transform: scale(1.05);
     }
     .about-section {
       max-width: 800px;
@@ -113,11 +117,9 @@
       margin-top: 2rem;
     }
     @media (max-width: 600px) {
-      .welcome-section h1 {
-        font-size: 2rem;
-      }
+      .welcome-section h1,
       .welcome-section h2 {
-        font-size: 1.25rem;
+        font-size: 2rem;
       }
       .buttons-section button {
         width: 80%;
@@ -138,7 +140,7 @@
   </nav>
 
   <section class="welcome-section">
-    <h2>Welcome to:</h2>
+    <h1>Welcome to:</h1>
     <h1>Lithako Edu & Sports</h1>
     <h2>Empowering our young minds through education & sports.</h2>
     <p>
