--- a/tutoring.html
+++ b/tutoring.html
@@ -93,7 +93,7 @@
 
   <nav>
     <a href="index.html">Home</a>
-    <a href="tutoring.html">Tutoring</a>
+    <a href="books.html">Books</a>
   </nav>
 
   <section>
