--- a/index.html
+++ b/index.html
@@ -48,16 +48,18 @@
     .welcome-section {
       text-align: center;
       padding: 2rem 1rem;
-      color: #000000; /* Make all text black */
+      color: #000000;
     }
-    .welcome-section h1,
-    .welcome-section h2 {
+    .welcome-section h1 {
       font-size: 2.5rem;
       margin: 0.5rem 0;
       font-weight: bold;
     }
-    .welcome-section h2 {
-      /* Keep both "Welcome to:" and "Empowering..." same size as h1? */
+    .welcome-section h2.slogan {
+      font-size: 1.5rem; /* smaller than h1 but bigger than paragraph */
+      margin: 0.5rem 0 1rem 0;
+      font-weight: bold;
+      color: #005fa3; /* darker blue like last sentence */
     }
     .welcome-section p {
       max-width: 800px;
@@ -80,7 +82,7 @@
       background: #005fa3;
       color: white;
       border: none;
-      padding: 0.75rem 2rem;
+      padding: 0.5rem 1.5rem; /* smaller padding for narrower buttons */
       font-size: 1rem;
       border-radius: 6px;
       cursor: pointer;
@@ -104,6 +106,12 @@
       border-radius: 6px;
       color: #000000;
     }
+    .about-section h2 {
+      margin-top: 0;
+      font-size: 2rem;
+      font-weight: bold;
+      margin-bottom: 1rem;
+    }
     .about-section p {
       margin: 0;
       line-height: 1.6;
@@ -117,9 +125,11 @@
       margin-top: 2rem;
     }
     @media (max-width: 600px) {
-      .welcome-section h1,
-      .welcome-section h2 {
+      .welcome-section h1 {
         font-size: 2rem;
+      }
+      .welcome-section h2.slogan {
+        font-size: 1.2rem;
       }
       .buttons-section button {
         width: 80%;
@@ -142,7 +152,7 @@
   <section class="welcome-section">
     <h1>Welcome to:</h1>
     <h1>Lithako Edu & Sports</h1>
-    <h2>Empowering our young minds through education & sports.</h2>
+    <h2 class="slogan">Empowering our young minds through education & sports.</h2>
     <p>
       Our structured training programs are tailored for learners aged 5 to 15, combining academic support with high-performance sports development across Football, Basketball, Netball, Athletics, and more.
     </p>
@@ -160,6 +170,7 @@
   </section>
 
   <section class="about-section">
+    <h2>About Ranneile Lesupi</h2>
     <p><strong>Ranneile Lesupi</strong> - Sports Coach & Business Visionary. A storyteller at heart. Through <strong>Lithako Edu & Sports</strong>, he mentors and develops young learners and athletes aged 5-15, guiding them to become confident scholars and disciplined champions.</p>
   </section>
 
@@ -169,3 +180,4 @@
 
 </body>
 </html>
+
