--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
       display: flex;
       flex-direction: column;
       align-items: center;
-      gap: 1.5rem;
+      gap: 1rem; /* more vertical spacing between buttons */
       margin: 2rem 0;
     }
     .buttons-section button {
@@ -165,7 +165,7 @@
   </section>
 
   <section class="buttons-section">
-    <button onclick="window.location.href='books.html'"><i class="fas fa-book"></i> Explore Our Books</button>
+    <button onclick="window.location.href='books.html'"><i class="fas fa-books"></i> Explore Our Books</button>
     <button onclick="window.location.href='tutoring.html'"><i class="fas fa-graduation-cap"></i> Join Our Tutoring</button>
   </section>
 
