--- a/index.html
+++ b/index.html
@@ -14,6 +14,8 @@
       color: #000000;
       line-height: 1.6;
     }
+
+    /* === Header and Logo === */
     header {
       width: 100%;
       height: 33vh;
@@ -24,11 +26,13 @@
       box-sizing: border-box;
       overflow: hidden;
     }
+
     header img {
       width: 100%;
       height: 100%;
-      object-fit: contain;
+      object-fit: cover; /* Changed from 'contain' to 'cover' to fill border area */
     }
+
     nav {
       background: #005fa3;
       display: flex;
@@ -75,14 +79,14 @@
       display: flex;
       flex-direction: column;
       align-items: center;
-      gap: 1rem; /* more vertical spacing between buttons */
+      gap: 1rem;
       margin: 2rem 0;
     }
     .buttons-section button {
       background: #005fa3;
       color: white;
       border: none;
-      padding: 0.5rem 1.5rem; /* smaller padding for narrower buttons */
+      padding: 0.5rem 1.5rem;
       font-size: 1rem;
       border-radius: 6px;
       cursor: pointer;
@@ -165,7 +169,7 @@
   </section>
 
   <section class="buttons-section">
-    <button onclick="window.location.href='books.html'"><i class="fas fa-books"></i> Explore Our Books</button>
+    <button onclick="window.location.href='books.html'"><i class="fas fa-book"></i> Explore Our Books</button>
     <button onclick="window.location.href='tutoring.html'"><i class="fas fa-graduation-cap"></i> Join Our Tutoring</button>
   </section>
 
@@ -180,4 +184,3 @@
 
 </body>
 </html>
-
