--- a/index.html
+++ b/index.html
@@ -15,22 +15,33 @@
       line-height: 1.6;
     }
 
-    /* === Header and Logo === */
+    /* === Header (Text version) === */
     header {
       width: 100%;
       height: 33vh;
+      background-color: #000000;
+      color: white;
       display: flex;
+      flex-direction: column;
       justify-content: center;
       align-items: center;
+      text-align: center;
       border: 4px solid #add8e6; /* Light blue border */
       box-sizing: border-box;
-      overflow: hidden;
     }
 
-    header img {
-      width: 100%;
-      height: 100%;
-      object-fit: cover; /* Changed from 'contain' to 'cover' to fill border area */
+    header h1 {
+      font-size: 3rem;
+      margin: 0;
+      font-weight: 700;
+      letter-spacing: 2px;
+    }
+
+    header h2 {
+      font-size: 2rem;
+      margin: 0;
+      font-weight: 600;
+      letter-spacing: 1px;
     }
 
     nav {
@@ -49,6 +60,7 @@
     nav a:hover {
       text-decoration: underline;
     }
+
     .welcome-section {
       text-align: center;
       padding: 2rem 1rem;
@@ -60,10 +72,10 @@
       font-weight: bold;
     }
     .welcome-section h2.slogan {
-      font-size: 1.5rem; /* smaller than h1 but bigger than paragraph */
+      font-size: 1.5rem;
       margin: 0.5rem 0 1rem 0;
       font-weight: bold;
-      color: #005fa3; /* darker blue like last sentence */
+      color: #005fa3;
     }
     .welcome-section p {
       max-width: 800px;
@@ -129,6 +141,12 @@
       margin-top: 2rem;
     }
     @media (max-width: 600px) {
+      header h1 {
+        font-size: 2.2rem;
+      }
+      header h2 {
+        font-size: 1.6rem;
+      }
       .welcome-section h1 {
         font-size: 2rem;
       }
@@ -145,7 +163,8 @@
 <body>
 
   <header>
-    <img src="Lithako-Logo.png" alt="Lithako Edu & Sports Logo">
+    <h1>LITHAKO</h1>
+    <h2>EDU & SPORTS</h2>
   </header>
 
   <nav>
