--- a/index.html
+++ b/index.html
@@ -8,14 +8,14 @@
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css" integrity="sha512-aN9DwH9IQJtX1a6nZ6UeV0l2O+HFXM3e1XJqHJ1lVY9Z2o3kfrF+4+zz8yA0Tc0T3qVqKsx6/2I9qN7S3+RTOw==" crossorigin="anonymous" referrerpolicy="no-referrer" />
   <style>
     body {
-      font-family: Arial, sans-serif;
+      font-family: 'Poppins', sans-serif;
       margin: 0;
       background: #f1f8ff;
       color: #000000;
       line-height: 1.6;
     }
 
-    /* === Header (Text version) === */
+    /* === Header (stacked and tight) === */
     header {
       width: 100%;
       height: 33vh;
@@ -26,22 +26,19 @@
       justify-content: center;
       align-items: center;
       text-align: center;
-      border: 4px solid #add8e6; /* Light blue border */
       box-sizing: border-box;
     }
 
-    header h1 {
+    header h1, header h2 {
       font-size: 3rem;
       margin: 0;
+      line-height: 1.1; /* Tighter spacing between lines */
       font-weight: 700;
-      letter-spacing: 2px;
+      letter-spacing: 3px;
     }
 
     header h2 {
-      font-size: 2rem;
-      margin: 0;
-      font-weight: 600;
-      letter-spacing: 1px;
+      color: #add8e6; /* light blue accent */
     }
 
     nav {
@@ -51,12 +48,14 @@
       gap: 2rem;
       padding: 1rem 0;
     }
+
     nav a {
       color: white;
       text-decoration: none;
       font-weight: bold;
       font-size: 1.1rem;
     }
+
     nav a:hover {
       text-decoration: underline;
     }
@@ -66,27 +65,32 @@
       padding: 2rem 1rem;
       color: #000000;
     }
+
     .welcome-section h1 {
       font-size: 2.5rem;
       margin: 0.5rem 0;
       font-weight: bold;
     }
+
     .welcome-section h2.slogan {
       font-size: 1.5rem;
       margin: 0.5rem 0 1rem 0;
       font-weight: bold;
       color: #005fa3;
     }
+
     .welcome-section p {
       max-width: 800px;
       margin: 0.75rem auto;
       font-size: 1rem;
       line-height: 1.6;
     }
+
     .highlight {
       font-weight: bold;
       color: #005fa3;
     }
+
     .buttons-section {
       display: flex;
       flex-direction: column;
@@ -94,6 +98,7 @@
       gap: 1rem;
       margin: 2rem 0;
     }
+
     .buttons-section button {
       background: #005fa3;
       color: white;
@@ -107,12 +112,15 @@
       gap: 0.5rem;
       transition: transform 0.2s;
     }
+
     .buttons-section button i {
       font-size: 1.2rem;
     }
+
     .buttons-section button:hover {
       transform: scale(1.05);
     }
+
     .about-section {
       max-width: 800px;
       margin: 2rem auto;
@@ -122,16 +130,19 @@
       border-radius: 6px;
       color: #000000;
     }
+
     .about-section h2 {
       margin-top: 0;
       font-size: 2rem;
       font-weight: bold;
       margin-bottom: 1rem;
     }
+
     .about-section p {
       margin: 0;
       line-height: 1.6;
     }
+
     footer {
       background: #000000;
       color: white;
@@ -140,12 +151,10 @@
       font-size: 0.9rem;
       margin-top: 2rem;
     }
+
     @media (max-width: 600px) {
-      header h1 {
-        font-size: 2.2rem;
-      }
-      header h2 {
-        font-size: 1.6rem;
+      header h1, header h2 {
+        font-size: 2rem;
       }
       .welcome-section h1 {
         font-size: 2rem;
