--- a/index.html
+++ b/index.html
@@ -15,12 +15,12 @@
       line-height: 1.6;
     }
 
-    /* === Header (stacked and tight) === */
+    /* === Header (entire title unified) === */
     header {
       width: 100%;
       height: 33vh;
       background-color: #000000;
-      color: white;
+      color: #add8e6; /* Light blue for all text */
       display: flex;
       flex-direction: column;
       justify-content: center;
@@ -29,16 +29,12 @@
       box-sizing: border-box;
     }
 
-    header h1, header h2 {
+    header h1 {
       font-size: 3rem;
       margin: 0;
-      line-height: 1.1; /* Tighter spacing between lines */
+      line-height: 1.1;
       font-weight: 700;
       letter-spacing: 3px;
-    }
-
-    header h2 {
-      color: #add8e6; /* light blue accent */
     }
 
     nav {
@@ -153,7 +149,7 @@
     }
 
     @media (max-width: 600px) {
-      header h1, header h2 {
+      header h1 {
         font-size: 2rem;
       }
       .welcome-section h1 {
@@ -172,8 +168,7 @@
 <body>
 
   <header>
-    <h1>LITHAKO</h1>
-    <h2>EDU & SPORTS</h2>
+    <h1>LITHAKO EDU & SPORTS</h1>
   </header>
 
   <nav>
