--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
       line-height: 1.6;
     }
 
-    /* === Header (entire title unified) === */
+    /* === Header (two-line layout) === */
     header {
       width: 100%;
       height: 33vh;
@@ -150,7 +150,7 @@
 
     @media (max-width: 600px) {
       header h1 {
-        font-size: 2rem;
+        font-size: 2.2rem;
       }
       .welcome-section h1 {
         font-size: 2rem;
@@ -168,7 +168,7 @@
 <body>
 
   <header>
-    <h1>LITHAKO EDU & SPORTS</h1>
+    <h1>LITHAKO<br>EDU & SPORTS</h1>
   </header>
 
   <nav>
