Change button icon color to white
Updated button icon color for better visibility.

--- a/index.html
+++ b/index.html
@@ -303,7 +303,7 @@
   </section>
 
   <section class="buttons-section">
-    <button onclick="window.location.href='books.html'"><i class="fas fa-book icon-blue"></i> Explore Our Books</button>
+    <button onclick="window.location.href='books.html'"><i class="fas fa-book" style="color: #ffffff;"></i> Explore Our Books</button>
     <button onclick="window.location.href='tutoring.html'"><i class="fas fa-graduation-cap icon-gold"></i> Join Our Tutoring</button>
   </section>
 
